   * proper handling of description autogeneration for per level [effect]
     on level 0 units
   * changed the order of which the permanent modifications of a unit are
     evaluated to (amlas, traits, objects)
     (previous order: objects, traits, amlas)
   * updated the copyright info in the source files also made it explicit
     Wesnoth is GPL 2 only (Wesnoth was already GPL 2 only)

Version 1.3.5:
 * campaigns
   * Heir to the Throne
     * The Elvish Lord's and Elvish High Lord's faerie fire attacks have been
       changed from cold to arcane and reduced from 8-3 and 8-5 to 7-3 and 7-5
       respectively
     * The obsolete Cockatrice unit has been removed
     * The bugs in HttT's SoF scenario have been fixed
   * Sceptre of Fire
     * changed Haldric II a bit and gave him new a sprite and animations
   * fixed teamcolourless fake unit moves in TRoW, HttT, EI, SoF, NR,
     TSG and TB
 * map editor:
   * new checkbox for the "delay transition update" option
   * map code has been refactored and separated from the main game
 * graphics
   * new animations: elvish scout idle
   * fix bug #9398 (attacking units always above defending units)
 * sounds and music
   * removed unused sounds: firearrow.wav, hatchet.ogg
 * language and i18n:
   * updated translations: Czech, Danish, Finnish, French, Galician, German,
     Greek, Indonesian, Japanese, Lithuanian, Polish, Spanish, Swedish
   * updated DejaVuSans font to version 2.18
 * multiplayer:
   * revised maps: Blitz, Cynsaun Battlefield, Hamlets, Sablestone Delta,
     Silverhead Crossing, Sulla's Ruins, Blue Water Province, Clash
   * fix MP crash on next scenario, thanks to Rhuvaen
   * option to suppress lobby minimaps is gone.
     Its champion concluded it was pointless.
 * units
   * new "mechanical" trait, meant to show mechanical units are immune to poison
   * balancing changes:
     * changed the 'resilient' trait from +3HP +10% to +4HP + 1HP * unit level