@@ -594,6 +594,9 @@
         name = "Laurent Birtz"
     [/entry]
     [entry]
+        name = "Manuel Osório Binelo (manuelb)"
+    [/entry]
+    [entry]
         name = "Martin Renold (maxy/martinxyz)"
     [/entry]
     [entry]
