@@ -201,6 +201,8 @@ Version 1.3.6:
      (previous order: objects, traits, amlas)
    * updated the copyright info in the source files also made it explicit
      Wesnoth is GPL 2 only (Wesnoth was already GPL 2 only)
+   * Music transitions have now smooth transitions based on m_before end 
+     ms_after wml tags
 
 Version 1.3.5:
  * campaigns
